# pluralkit_rich_presence

./: Cargo.toml
src/: activity_handler.rs  config.rs  discord.rs  error.rs  lib.rs  main.rs  pluralkit.rs
