[package]
name = "pluralkit_rich_presence"
version = "0.1.0"
edition = "2021"

[dependencies]
discord-rich-presence = "0.2.4"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
toml = "0.8.14"
